sdk-docs_versioned_docs/version-22.0.x/enums/Types/ExtrinsicsOrderBy/ExtrinsicsOrderBy.md
---
id: "ExtrinsicsOrderBy"
title: "Enumeration: ExtrinsicsOrderBy"
sidebar_label: "ExtrinsicsOrderBy"
---

[types](../../../modules/Types/Types.md).ExtrinsicsOrderBy

Methods to use when ordering `Extrinsic`.

## Enumeration Members

### AddressAsc

• **AddressAsc** = ``"ADDRESS_ASC"``

#### Defined in

[middleware/types.ts:18981](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L18981)

___

### AddressDesc

• **AddressDesc** = ``"ADDRESS_DESC"``

#### Defined in

[middleware/types.ts:18982](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L18982)

___

### BlockIdAsc

• **BlockIdAsc** = ``"BLOCK_ID_ASC"``

#### Defined in

[middleware/types.ts:18983](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L18983)

___

### BlockIdDesc

• **BlockIdDesc** = ``"BLOCK_ID_DESC"``

#### Defined in

[middleware/types.ts:18984](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L18984)

___

### CallIdAsc

• **CallIdAsc** = ``"CALL_ID_ASC"``

#### Defined in

[middleware/types.ts:18985](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L18985)

___

### CallIdDesc

• **CallIdDesc** = ``"CALL_ID_DESC"``

#### Defined in

[middleware/types.ts:18986](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L18986)

___

### CreatedAtAsc

• **CreatedAtAsc** = ``"CREATED_AT_ASC"``

#### Defined in

[middleware/types.ts:18987](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L18987)

___

### CreatedAtDesc

• **CreatedAtDesc** = ``"CREATED_AT_DESC"``

#### Defined in

[middleware/types.ts:18988](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L18988)

___

### ExtrinsicHashAsc

• **ExtrinsicHashAsc** = ``"EXTRINSIC_HASH_ASC"``

#### Defined in

[middleware/types.ts:18989](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L18989)

___

### ExtrinsicHashDesc

• **ExtrinsicHashDesc** = ``"EXTRINSIC_HASH_DESC"``

#### Defined in

[middleware/types.ts:18990](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L18990)

___

### ExtrinsicIdxAsc

• **ExtrinsicIdxAsc** = ``"EXTRINSIC_IDX_ASC"``

#### Defined in

[middleware/types.ts:18991](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L18991)

___

### ExtrinsicIdxDesc

• **ExtrinsicIdxDesc** = ``"EXTRINSIC_IDX_DESC"``

#### Defined in

[middleware/types.ts:18992](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L18992)

___

### ExtrinsicLengthAsc

• **ExtrinsicLengthAsc** = ``"EXTRINSIC_LENGTH_ASC"``

#### Defined in

[middleware/types.ts:18993](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L18993)

___

### ExtrinsicLengthDesc

• **ExtrinsicLengthDesc** = ``"EXTRINSIC_LENGTH_DESC"``

#### Defined in

[middleware/types.ts:18994](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L18994)

___

### IdAsc

• **IdAsc** = ``"ID_ASC"``

#### Defined in

[middleware/types.ts:18995](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L18995)

___

### IdDesc

• **IdDesc** = ``"ID_DESC"``

#### Defined in

[middleware/types.ts:18996](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L18996)

___

### ModuleIdAsc

• **ModuleIdAsc** = ``"MODULE_ID_ASC"``

#### Defined in

[middleware/types.ts:18997](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L18997)

___

### ModuleIdDesc

• **ModuleIdDesc** = ``"MODULE_ID_DESC"``

#### Defined in

[middleware/types.ts:18998](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L18998)

___

### Natural

• **Natural** = ``"NATURAL"``

#### Defined in

[middleware/types.ts:18999](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L18999)

___

### NonceAsc

• **NonceAsc** = ``"NONCE_ASC"``

#### Defined in

[middleware/types.ts:19000](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L19000)

___

### NonceDesc

• **NonceDesc** = ``"NONCE_DESC"``

#### Defined in

[middleware/types.ts:19001](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L19001)

___

### ParamsAsc

• **ParamsAsc** = ``"PARAMS_ASC"``

#### Defined in

[middleware/types.ts:19002](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L19002)

___

### ParamsDesc

• **ParamsDesc** = ``"PARAMS_DESC"``

#### Defined in

[middleware/types.ts:19003](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L19003)

___

### ParamsTxtAsc

• **ParamsTxtAsc** = ``"PARAMS_TXT_ASC"``

#### Defined in

[middleware/types.ts:19004](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L19004)

___

### ParamsTxtDesc

• **ParamsTxtDesc** = ``"PARAMS_TXT_DESC"``

#### Defined in

[middleware/types.ts:19005](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L19005)

___

### PolyxTransactionsCountAsc

• **PolyxTransactionsCountAsc** = ``"POLYX_TRANSACTIONS_COUNT_ASC"``

#### Defined in

[middleware/types.ts:19006](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L19006)

___

### PolyxTransactionsCountDesc

• **PolyxTransactionsCountDesc** = ``"POLYX_TRANSACTIONS_COUNT_DESC"``

#### Defined in

[middleware/types.ts:19007](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L19007)

___

### PrimaryKeyAsc

• **PrimaryKeyAsc** = ``"PRIMARY_KEY_ASC"``

#### Defined in

[middleware/types.ts:19008](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L19008)

___

### PrimaryKeyDesc

• **PrimaryKeyDesc** = ``"PRIMARY_KEY_DESC"``

#### Defined in

[middleware/types.ts:19009](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L19009)

___

### SignedAsc

• **SignedAsc** = ``"SIGNED_ASC"``

#### Defined in

[middleware/types.ts:19012](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L19012)

___

### SignedDesc

• **SignedDesc** = ``"SIGNED_DESC"``

#### Defined in

[middleware/types.ts:19013](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L19013)

___

### SignedbyAddressAsc

• **SignedbyAddressAsc** = ``"SIGNEDBY_ADDRESS_ASC"``

#### Defined in

[middleware/types.ts:19010](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L19010)

___

### SignedbyAddressDesc

• **SignedbyAddressDesc** = ``"SIGNEDBY_ADDRESS_DESC"``

#### Defined in

[middleware/types.ts:19011](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L19011)

___

### SpecVersionIdAsc

• **SpecVersionIdAsc** = ``"SPEC_VERSION_ID_ASC"``

#### Defined in

[middleware/types.ts:19014](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L19014)

___

### SpecVersionIdDesc

• **SpecVersionIdDesc** = ``"SPEC_VERSION_ID_DESC"``

#### Defined in

[middleware/types.ts:19015](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L19015)

___

### SuccessAsc

• **SuccessAsc** = ``"SUCCESS_ASC"``

#### Defined in

[middleware/types.ts:19016](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L19016)

___

### SuccessDesc

• **SuccessDesc** = ``"SUCCESS_DESC"``

#### Defined in

[middleware/types.ts:19017](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L19017)

___

### UpdatedAtAsc

• **UpdatedAtAsc** = ``"UPDATED_AT_ASC"``

#### Defined in

[middleware/types.ts:19018](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L19018)

___

### UpdatedAtDesc

• **UpdatedAtDesc** = ``"UPDATED_AT_DESC"``

#### Defined in

[middleware/types.ts:19019](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L19019)
