sdk-docs_versioned_docs/version-27.5.x/enums/Types/ExtrinsicsOrderBy/ExtrinsicsOrderBy.md
---
id: "ExtrinsicsOrderBy"
title: "Enumeration: ExtrinsicsOrderBy"
sidebar_label: "ExtrinsicsOrderBy"
---

[types](../../../modules/Types/Types.md).ExtrinsicsOrderBy

## Enumeration Members

### AddressAsc

• **AddressAsc** = ``"ADDRESS_ASC"``

#### Defined in

[middleware/types.ts:4402](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4402)

___

### AddressDesc

• **AddressDesc** = ``"ADDRESS_DESC"``

#### Defined in

[middleware/types.ts:4403](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4403)

___

### BlockIdAsc

• **BlockIdAsc** = ``"BLOCK_ID_ASC"``

#### Defined in

[middleware/types.ts:4404](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4404)

___

### BlockIdDesc

• **BlockIdDesc** = ``"BLOCK_ID_DESC"``

#### Defined in

[middleware/types.ts:4405](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4405)

___

### CallIdAsc

• **CallIdAsc** = ``"CALL_ID_ASC"``

#### Defined in

[middleware/types.ts:4406](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4406)

___

### CallIdDesc

• **CallIdDesc** = ``"CALL_ID_DESC"``

#### Defined in

[middleware/types.ts:4407](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4407)

___

### CallIdTextAsc

• **CallIdTextAsc** = ``"CALL_ID_TEXT_ASC"``

#### Defined in

[middleware/types.ts:4408](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4408)

___

### CallIdTextDesc

• **CallIdTextDesc** = ``"CALL_ID_TEXT_DESC"``

#### Defined in

[middleware/types.ts:4409](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4409)

___

### CreatedAtAsc

• **CreatedAtAsc** = ``"CREATED_AT_ASC"``

#### Defined in

[middleware/types.ts:4439](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4439)

___

### CreatedAtDesc

• **CreatedAtDesc** = ``"CREATED_AT_DESC"``

#### Defined in

[middleware/types.ts:4440](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4440)

___

### ExtrinsicHashAsc

• **ExtrinsicHashAsc** = ``"EXTRINSIC_HASH_ASC"``

#### Defined in

[middleware/types.ts:4410](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4410)

___

### ExtrinsicHashDesc

• **ExtrinsicHashDesc** = ``"EXTRINSIC_HASH_DESC"``

#### Defined in

[middleware/types.ts:4411](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4411)

___

### ExtrinsicIdxAsc

• **ExtrinsicIdxAsc** = ``"EXTRINSIC_IDX_ASC"``

#### Defined in

[middleware/types.ts:4412](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4412)

___

### ExtrinsicIdxDesc

• **ExtrinsicIdxDesc** = ``"EXTRINSIC_IDX_DESC"``

#### Defined in

[middleware/types.ts:4413](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4413)

___

### ExtrinsicLengthAsc

• **ExtrinsicLengthAsc** = ``"EXTRINSIC_LENGTH_ASC"``

#### Defined in

[middleware/types.ts:4414](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4414)

___

### ExtrinsicLengthDesc

• **ExtrinsicLengthDesc** = ``"EXTRINSIC_LENGTH_DESC"``

#### Defined in

[middleware/types.ts:4415](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4415)

___

### IdAsc

• **IdAsc** = ``"ID_ASC"``

#### Defined in

[middleware/types.ts:4416](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4416)

___

### IdDesc

• **IdDesc** = ``"ID_DESC"``

#### Defined in

[middleware/types.ts:4417](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4417)

___

### ModuleIdAsc

• **ModuleIdAsc** = ``"MODULE_ID_ASC"``

#### Defined in

[middleware/types.ts:4418](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4418)

___

### ModuleIdDesc

• **ModuleIdDesc** = ``"MODULE_ID_DESC"``

#### Defined in

[middleware/types.ts:4419](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4419)

___

### ModuleIdTextAsc

• **ModuleIdTextAsc** = ``"MODULE_ID_TEXT_ASC"``

#### Defined in

[middleware/types.ts:4420](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4420)

___

### ModuleIdTextDesc

• **ModuleIdTextDesc** = ``"MODULE_ID_TEXT_DESC"``

#### Defined in

[middleware/types.ts:4421](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4421)

___

### Natural

• **Natural** = ``"NATURAL"``

#### Defined in

[middleware/types.ts:4422](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4422)

___

### NonceAsc

• **NonceAsc** = ``"NONCE_ASC"``

#### Defined in

[middleware/types.ts:4423](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4423)

___

### NonceDesc

• **NonceDesc** = ``"NONCE_DESC"``

#### Defined in

[middleware/types.ts:4424](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4424)

___

### ParamsAsc

• **ParamsAsc** = ``"PARAMS_ASC"``

#### Defined in

[middleware/types.ts:4425](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4425)

___

### ParamsDesc

• **ParamsDesc** = ``"PARAMS_DESC"``

#### Defined in

[middleware/types.ts:4426](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4426)

___

### ParamsTxtAsc

• **ParamsTxtAsc** = ``"PARAMS_TXT_ASC"``

#### Defined in

[middleware/types.ts:4427](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4427)

___

### ParamsTxtDesc

• **ParamsTxtDesc** = ``"PARAMS_TXT_DESC"``

#### Defined in

[middleware/types.ts:4428](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4428)

___

### PrimaryKeyAsc

• **PrimaryKeyAsc** = ``"PRIMARY_KEY_ASC"``

#### Defined in

[middleware/types.ts:4429](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4429)

___

### PrimaryKeyDesc

• **PrimaryKeyDesc** = ``"PRIMARY_KEY_DESC"``

#### Defined in

[middleware/types.ts:4430](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4430)

___

### SignedAsc

• **SignedAsc** = ``"SIGNED_ASC"``

#### Defined in

[middleware/types.ts:4433](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4433)

___

### SignedDesc

• **SignedDesc** = ``"SIGNED_DESC"``

#### Defined in

[middleware/types.ts:4434](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4434)

___

### SignedbyAddressAsc

• **SignedbyAddressAsc** = ``"SIGNEDBY_ADDRESS_ASC"``

#### Defined in

[middleware/types.ts:4431](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4431)

___

### SignedbyAddressDesc

• **SignedbyAddressDesc** = ``"SIGNEDBY_ADDRESS_DESC"``

#### Defined in

[middleware/types.ts:4432](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4432)

___

### SpecVersionIdAsc

• **SpecVersionIdAsc** = ``"SPEC_VERSION_ID_ASC"``

#### Defined in

[middleware/types.ts:4435](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4435)

___

### SpecVersionIdDesc

• **SpecVersionIdDesc** = ``"SPEC_VERSION_ID_DESC"``

#### Defined in

[middleware/types.ts:4436](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4436)

___

### SuccessAsc

• **SuccessAsc** = ``"SUCCESS_ASC"``

#### Defined in

[middleware/types.ts:4437](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4437)

___

### SuccessDesc

• **SuccessDesc** = ``"SUCCESS_DESC"``

#### Defined in

[middleware/types.ts:4438](https://github.com/PolymeshAssociation/polymesh-sdk/blob/49a0066c3/src/middleware/types.ts#L4438)
